# network_time_tracker

./: README.MD  backend.py  main.py  pyproject.toml  web_app.py
app/: device_time_monitor.py
models/: device.py
views/: devices_online.py
views/templates/: base.html.j2  devices_online.html.j2
