[tool.poetry]
name = "network_time_tracker"
version = "0.1.0"
description = "Tracks how much time each devise is in your local network"
authors = ["Viktor Titov <titov@arrival.com>"]

[tool.poetry.dependencies]
python = "^3.8"
loguru = "^0.5.3"
fastapi = "^0.63.0"
uvicorn = "^0.12.0"
jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
